name:                enable-flow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/freizl/enable-flow#readme
license:             BSD3
license-file:        LICENSE
author:              Haisheng Wu
maintainer:          freizl@gmail.com
copyright:           2016 Haisheng Wu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable enable-flow
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , strict
